projetGL/src/test/deca/context/invalid/provided/invalide_04_mult_bool.deca
// Description : test la multiplication avec un boolean
// Resultat : 
// ERROR dans verify AbstractOpArith
// A MODIF

{
    boolean bool = false;
    boll = bool * 2;
}